--- a/package.json
+++ b/package.json
@@ -1,29 +1,45 @@
 {
-  "name": "blog-domain-challenge-1",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": ""
-  },
-  "prisma": {
-    "seed": "node prisma/seed.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/boolean-uk/blog-domain-challenge-1.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/boolean-uk/blog-domain-challenge-1/issues"
-  },
-  "homepage": "https://github.com/boolean-uk/blog-domain-challenge-1#readme",
-  "devDependencies": {
-    "prisma": "^5.16.1"
-  },
-  "dependencies": {
-    "@prisma/client": "^5.16.1"
-  }
+    "name": "blog-domain-challenge-1",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.ts",
+    "scripts": {
+        "start": "nodemon --exec ts-node src/index.ts",
+        "test": "npx jest"
+    },
+    "prisma": {
+        "seed": "ts-node prisma/seed.ts"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/boolean-uk/blog-domain-challenge-1.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/boolean-uk/blog-domain-challenge-1/issues"
+    },
+    "homepage": "https://github.com/boolean-uk/blog-domain-challenge-1#readme",
+    "devDependencies": {
+        "@types/cors": "^2.8.17",
+        "@types/express": "^4.17.21",
+        "@types/jest": "^29.5.12",
+        "@types/morgan": "^1.9.9",
+        "@types/node": "^22.1.0",
+        "@types/supertest": "^6.0.2",
+        "jest": "^29.7.0",
+        "nodemon": "^3.1.4",
+        "prisma": "^5.18.0",
+        "supertest": "^7.0.0",
+        "ts-jest": "^29.2.4",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.5.4"
+    },
+    "dependencies": {
+        "@prisma/client": "^5.18.0",
+        "cors": "^2.8.5",
+        "express": "^4.19.2",
+        "morgan": "^1.10.0"
+    }
 }
